<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/menu_home_title"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_round_star_24"
        android:title="@string/menu_favorites_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_round_watch_later_24"
        android:title="@string/menu_watch_later_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/collections"
        android:icon="@drawable/ic_round_collections_24"
        android:title="@string/menu_collections_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings_title"
        app:showAsAction="withText"/>

</menu>