<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watch_later_fragment_root"
    android:visibility="invisible"
    tools:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_watch_later"
    tools:context=".view.fragments.WatchLaterFragment">

</FrameLayout>